--- a/TL001_ツール.md
+++ b/TL001_ツール.md
@@ -1,48 +1,48 @@
-ƒVƒXƒeƒ€–¼
+ã‚·ã‚¹ãƒ†ãƒ å
 ======
 
-###ƒc[ƒ‹–¼
+###ãƒ„ãƒ¼ãƒ«å
 ------
 
-1.ƒc[ƒ‹‚ÌŠT—v
-	‚±‚Ìƒc[ƒ‹‚ÍA‚©‚çB‚Éƒf[ƒ^‚ðˆÚ“®‚³‚¹‚Ü‚·B
-	‚»‚Ìƒf[ƒ^‚ðƒNƒ‰ƒCƒAƒ“ƒg‚©‚çŽQÆ‚µ‚Ü‚·B
+1.ãƒ„ãƒ¼ãƒ«ã®æ¦‚è¦
+	ã“ã®ãƒ„ãƒ¼ãƒ«ã¯Aã‹ã‚‰Bã«ãƒ‡ãƒ¼ã‚¿ã‚’ç§»å‹•ã•ã›ã¾ã™ã€‚
+	ãã®ãƒ‡ãƒ¼ã‚¿ã‚’ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã‹ã‚‰å‚ç…§ã—ã¾ã™ã€‚
 
-2.ƒfƒBƒŒƒNƒgƒŠ\¬
+2.ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªæ§‹æˆ
 	${HOME_DIR}
 		|----------conf
-		|			|---------aaaaa.txtiÝ’èƒtƒ@ƒCƒ‹j
+		|			|---------aaaaa.txtï¼ˆè¨­å®šãƒ•ã‚¡ã‚¤ãƒ«ï¼‰
 		|
 		|
 		|----------log
-		|			|---------bbbbb.logiƒƒOƒtƒ@ƒCƒ‹j
+		|			|---------bbbbb.logï¼ˆãƒ­ã‚°ãƒ•ã‚¡ã‚¤ãƒ«ï¼‰
 		|
 		|
 		|----------exe
 					|---------ccccc.exe
 
-3.“®ì
+3.å‹•ä½œ
 ![test](../images/imageForMd.png)
 
-4.“üo—Í
-	4-1.“ü—Í
-		* Ý’èƒtƒ@ƒCƒ‹
+4.å…¥å‡ºåŠ›
+	4-1.å…¥åŠ›
+		* è¨­å®šãƒ•ã‚¡ã‚¤ãƒ«
 	
-		€–Ú | à–¾
+		é …ç›® | èª¬æ˜Ž
 		------------ | -------------
-		Ý’è’l‡@ | ‚±‚±‚É‚Í“–ŠYƒc[ƒ‹‚ÅŽg—p‚·‚éÝ’è’l‡@‚É‚Â‚¢‚Ä‹LÚ‚µ‚Ü‚·B
-		Ý’è’l‡A | ‚±‚±‚É‚Í“–ŠYƒc[ƒ‹‚ÅŽg—p‚·‚éÝ’è’l‡A‚É‚Â‚¢‚Ä‹LÚ‚µ‚Ü‚·B‚±‚Ì’l‚ÍÝ’è’l‡@‚É‚æ‚è•Ï‚í‚è‚Ü‚·‚ªA‚»‚¤‚Å‚È‚¢‚±‚Æ‚à‚ ‚è‚Ü‚·B
+		è¨­å®šå€¤â‘  | ã“ã“ã«ã¯å½“è©²ãƒ„ãƒ¼ãƒ«ã§ä½¿ç”¨ã™ã‚‹è¨­å®šå€¤â‘ ã«ã¤ã„ã¦è¨˜è¼‰ã—ã¾ã™ã€‚
+		è¨­å®šå€¤â‘¡ | ã“ã“ã«ã¯å½“è©²ãƒ„ãƒ¼ãƒ«ã§ä½¿ç”¨ã™ã‚‹è¨­å®šå€¤â‘¡ã«ã¤ã„ã¦è¨˜è¼‰ã—ã¾ã™ã€‚ã“ã®å€¤ã¯è¨­å®šå€¤â‘ ã«ã‚ˆã‚Šå¤‰ã‚ã‚Šã¾ã™ãŒã€ãã†ã§ãªã„ã“ã¨ã‚‚ã‚ã‚Šã¾ã™ã€‚
 
-		* Ý’èƒtƒ@ƒCƒ‹î•ñ
-		€–Ú | à–¾
+		* è¨­å®šãƒ•ã‚¡ã‚¤ãƒ«æƒ…å ±
+		é …ç›® | èª¬æ˜Ž
 		------------ | -------------
-		–¼Ì | aaaaa.txt
-		‰üsƒR[ƒh | LF(0x0a)
-		•¶ŽšƒR[ƒh | UTF-8
+		åç§° | aaaaa.txt
+		æ”¹è¡Œã‚³ãƒ¼ãƒ‰ | LF(0x0a)
+		æ–‡å­—ã‚³ãƒ¼ãƒ‰ | UTF-8
 	
-	4-2.o—Í
-		*ƒc[ƒ‹
-		b€–Ú | à–¾
+	4-2.å‡ºåŠ›
+		*ãƒ„ãƒ¼ãƒ«
+		ï½œé …ç›® | èª¬æ˜Ž
 		------------ | -------------
-		1bƒ^ƒCƒgƒ‹ | uƒc[ƒ‹v
-		2bo—Í‡I | u‚ ‚ ‚ ‚ ‚ ‚ ‚ ‚ ‚ ‚ ‚ ‚ ‚ v
+		1ï½œã‚¿ã‚¤ãƒˆãƒ« | ã€Œãƒ„ãƒ¼ãƒ«ã€
+		2ï½œå‡ºåŠ›â‘© | ã€Œã‚ã‚ã‚ã‚ã‚ã‚ã‚ã‚ã‚ã‚ã‚ã‚ã‚ã€
