--- a/TL001_ツール.md
+++ b/TL001_ツール.md
@@ -4,45 +4,43 @@
 ###ツール名
 ------
 
-1.ツールの概要
-	このツールはAからBにデータを移動させます。
-	そのデータをクライアントから参照します。
+1.ツールの概要  
+　　このツールはAからBにデータを移動させます。  
+　　そのデータをクライアントから参照します。  
 
-2.ディレクトリ構成
-	${HOME_DIR}
-		|----------conf
-		|			|---------aaaaa.txt（設定ファイル）
-		|
-		|
-		|----------log
-		|			|---------bbbbb.log（ログファイル）
-		|
-		|
-		|----------exe
-					|---------ccccc.exe
+2.ディレクトリ構成  
+　　　　${HOME_DIR}  
+　　　　　　|----------conf  
+　　　　　　|　　　　　　|---------aaaaa.txt（設定ファイル)  
+　　　　　　|----------log  
+　　　　　　|　　　　　　|---------bbbbb.log（ログファイル)  
+　　　　　　|----------exe  
+　　　　　　|　　　　　　|---------ccccc.exe  
 
-3.動作
-![test](../images/imageForMd.png)
+3.動作  
+![test] (/images/imageForMd.png)
 
-4.入出力
-	4-1.入力
-		* 設定ファイル
+4.入出力  
+　　　 4-1.入力  
+　　　・設定ファイル
 	
-		項目 | 説明
-		------------ | -------------
-		設定値① | ここには当該ツールで使用する設定値①について記載します。
-		設定値② | ここには当該ツールで使用する設定値②について記載します。この値は設定値①により変わりますが、そうでないこともあります。
+				項目 | 説明
+				------------ | -------------
+				設定値① | ここには当該ツールで使用する設定値①について記載します。
+				設定値② | ここには当該ツールで使用する設定値②について記載します。この値は設定値①により変わりますが、そうでないこともあります。
 
-		* 設定ファイル情報
+　　　・設定ファイル情報
+
 		項目 | 説明
 		------------ | -------------
 		名称 | aaaaa.txt
 		改行コード | LF(0x0a)
 		文字コード | UTF-8
 	
-	4-2.出力
-		*ツール
-		｜項目 | 説明
-		------------ | -------------
-		1｜タイトル | 「ツール」
-		2｜出力⑩ | 「あああああああああああああ」
+　　　4-2.出力  
+　　　・ツール
+
+		 | 項目 | 説明
+		------------ | ------------ | -------------
+		1|タイトル | 「ツール」
+		2|出力⑩ | 「あああああああああああああ」
