--- a/TL001_ツール.md
+++ b/TL001_ツール.md
@@ -27,7 +27,7 @@
     項目 | 説明
     ------------ | -------------
     設定値① | ここには当該ツールで使用する設定値①について記載します。
-    設定値② | ここには当該ツールで使用する設定値②について記載します。この値は設定値①により変わりますが、そうでないこともあります。
+    設定値② | ここには当該ツールで使用する設定値②について記載します。<br>この値は設定値①により変わりますが、そうでないこともあります。
  
     ・設定ファイル情報
   
