--- a/TL001_ツール.md
+++ b/TL001_ツール.md
@@ -43,4 +43,4 @@
      | 項目 | 説明
     ------------ | ------------ | -------------
     1|タイトル | 「ツール」
-    2|出力⑩ | 「あああああああああああああ」
+    2|出力⑩ | 「メッセージ」
