--- a/TL001_ツール.md
+++ b/TL001_ツール.md
@@ -33,7 +33,7 @@
   
     項目 | 説明
     ------------ | -------------
-    名称 | aaaaa.txt
+    名称 | aaaaa.csv
     改行コード | LF(0x0a)
     文字コード | UTF-8
 
